check_workspace_final.txt
warning: C:\Projects\Fusion - Programming Language\registry\crates\tensor-sparse\Cargo.toml: `default-features` is ignored for fusion_core, since `default-features` was not specified for `workspace.dependencies.fusion_core`, this could become a hard error in the future
warning: C:\Projects\Fusion - Programming Language\registry\crates\finite-fields\Cargo.toml: `default-features` is ignored for fusion_core, since `default-features` was not specified for `workspace.dependencies.fusion_core`, this could become a hard error in the future
warning: C:\Projects\Fusion - Programming Language\registry\crates\finite-fields\Cargo.toml: `default-features` is ignored for fusion_std, since `default-features` was not specified for `workspace.dependencies.fusion_std`, this could become a hard error in the future
    Checking fusion-core v0.2.0 (C:\Projects\Fusion - Programming Language\registry\crates\fusion-core)
   Compiling pyo3-build-config v0.20.3
warning: unused import: `anyhow::Result`
  --> crates\fusion-review-policy\src\enforcement.rs:15:5
   |
15 | use anyhow::Result;
   |     ^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: `fusion-review-policy` (lib) generated 1 warning (run `cargo fix --lib -p fusion-review-policy` to apply 1 suggestion)
warning: unused import: `Path`
  --> crates\fusion-settings\src\lib.rs:17:17
   |
17 | use std::path::{Path, PathBuf};
   |                 ^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: unused import: `anyhow::Result`
  --> crates\fusion-task-groups\src\manager.rs:11:5
   |
11 | use anyhow::Result;
   |     ^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default

warning: unused import: `PendingStep`
  --> crates\fusion-task-groups\src\ui.rs:10:13
   |
10 | use crate::{PendingStep, Subtask, TaskGroup};
   |             ^^^^^^^^^^^

warning: `fusion-settings` (lib) generated 1 warning (run `cargo fix --lib -p fusion-settings` to apply 1 suggestion)
warning: `fusion-task-groups` (lib) generated 2 warnings (run `cargo fix --lib -p fusion-task-groups` to apply 2 suggestions)
warning: unused variable: `json`
 --> cmd\fusion-coder\src\exec_mode.rs:2:28
  |
2 | pub fn execute(task: &str, json: bool) {
  |                            ^^^^ help: if this is intentional, prefix it with an underscore: `_json`
  |
  = note: `#[warn(unused_variables)]` on by default

warning: function `start` is never used
 --> cmd\fusion-coder\src\interactive.rs:2:8
  |
2 | pub fn start() {
  |        ^^^^^
  |
  = note: `#[warn(dead_code)]` on by default

warning: `fusion-coder` (bin "fusion-coder") generated 2 warnings
error[E0277]: the trait bound `Complex<f64>: serde::Serialize` is not satisfied
   --> registry\crates\fusion-core\src\types\quantum.rs:11:24
    |
 11 | #[derive(Debug, Clone, Serialize, Deserialize)]
    |                        ^^^^^^^^^ the trait `Serialize` is not implemented for `Complex<f64>`
 12 | pub enum QuantumState {
 13 |     Simulated(Vec<Complex64>),
    |               --- required by a bound introduced by this call
    |
    = note: for local types consider adding `#[derive(serde::Serialize)]` to your `Complex<f64>` type
    = note: for types from other crates check whether the crate offers a `serde` feature flag
    = help: the following other types implement trait `Serialize`:
              &'a T
              &'a mut T
              ()
              (T,)
              (T0, T1)
              (T0, T1, T2)
              (T0, T1, T2, T3)
              (T0, T1, T2, T3, T4)
            and 136 others
    = note: required for `Vec<Complex<f64>>` to implement `Serialize`
note: required by a bound in `serialize_newtype_variant`
   --> C:\Users\Matth\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\serde_core-1.0.228\src\ser\mod.rs:958:21
    |
950 |     fn serialize_newtype_variant<T>(
    |        ------------------------- required by a bound in this associated function
...
958 |         T: ?Sized + Serialize;
    |                     ^^^^^^^^^ required by this bound in `Serializer::serialize_newtype_variant`
    = note: this error originates in the derive macro `Serialize` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Complex<f64>: serde::Deserialize<'de>` is not satisfied
    --> registry\crates\fusion-core\src\types\quantum.rs:13:15
     |
  13 |     Simulated(Vec<Complex64>),
     |               ^^^^^^^^^^^^^^ the trait `Deserialize<'_>` is not implemented for `Complex<f64>`
     |
     = note: for local types consider adding `#[derive(serde::Deserialize)]` to your `Complex<f64>` type
     = note: for types from other crates check whether the crate offers a `serde` feature flag
     = help: the following other types implement trait `Deserialize<'de>`:
               &'a Path
               &'a [u8]
               &'a str
               ()
               (T,)
               (T0, T1)
               (T0, T1, T2)
               (T0, T1, T2, T3)
             and 150 others
     = note: required for `Vec<Complex<f64>>` to implement `Deserialize<'_>`
note: required by a bound in `newtype_variant`
    --> C:\Users\Matth\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\serde_core-1.0.228\src\de\mod.rs:2182:12
     |
2180 |     fn newtype_variant<T>(self) -> Result<T, Self::Error>
     |        --------------- required by a bound in this associated function
2181 |     where
2182 |         T: Deserialize<'de>,
     |            ^^^^^^^^^^^^^^^^ required by this bound in `VariantAccess::newtype_variant`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `fusion-core` (lib) due to 2 previous errors
warning: build failed, waiting for other jobs to finish...
